--- a/part12-containers/part-c-playground/hello-front/Dockerfile
+++ b/part12-containers/part-c-playground/hello-front/Dockerfile
@@ -3,13 +3,13 @@ FROM node:16 AS build-stage
 
 WORKDIR /usr/src/app
 
-COPY . .
+COPY --chown=node:node . .
 
-RUN npm ci
+RUN npm ci --only=production
 
-RUN npm run build
+USER node
 
-RUN npm install -g serve
+RUN ["npm", "run", "build"]
 
 # This is a new stage, everything before this is gone, except the files we want to COPY
 FROM nginx:1.20-alpine
