Fix basic docker express server docker config using better practices

--- a/part12-containers/part-b-playground/Dockerfile
+++ b/part12-containers/part-b-playground/Dockerfile
@@ -1,13 +1,19 @@
 FROM node:16
 
+ENV NODE_ENV=production
+
 WORKDIR /usr/src/app
 
-COPY --chown=node:node . .
+COPY --chown=node:node package*.json .
 
 RUN npm ci --only=production
 
+COPY --chown=node:node . .
+
 ENV DEBUG=part-b-playground:*
+
+RUN apt-get update && apt-get install -y --no-install-recommends dumb-init
 
 USER node
 
-CMD ["node", "./bin/www"]
+CMD ["dumb-init", "node", "./bin/www"]
