Fix todo-app frontend docker config with better practices

--- a/part12-containers/todo-app/todo-frontend/Dockerfile
+++ b/part12-containers/todo-app/todo-frontend/Dockerfile
@@ -1,15 +1,24 @@
 FROM node:16 AS base
+RUN apt-get update && apt-get install -y --no-install-recommends dumb-init
+ENV NODE_ENV=production
 ENV REACT_APP_BACKEND_URL="//localhost:3000"
 WORKDIR /usr/src/app
-COPY . .
-RUN npm ci
+COPY --chown=node:node package*.json .
+RUN chown node:node /usr/src/app
+USER node
+RUN npm ci --only=production
+COPY --chown=node:node . .
 
 FROM base as test
 ENV CI=true
-RUN npm run test
+USER node
+RUN ["dumb-init", "node_modules/react-scripts/bin/react-scripts.js", "test"]
+# RUN npm run test
 
 FROM test as build
-RUN npm run build
+USER node
+RUN ["dumb-init", "node_modules/react-scripts/bin/react-scripts.js", "build"]
+# RUN npm run build
 
 FROM nginx:1.20-alpine
 COPY --from=build /usr/src/app/build /usr/share/nginx/html
