--- a/part12-containers/todo-app/todo-backend/docker-compose.dev.yml
+++ b/part12-containers/todo-app/todo-backend/docker-compose.dev.yml
@@ -12,10 +12,25 @@ services:
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - ./mongo_data:/data/db
+    container_name: mongo
   redis:
     image: redis:7.0.5-bullseye
     ports:
       - 6378:6379
-    command: ['redis-server', '--appendonly', 'yes'] # Overwrite the CMD
-    volumes: # Declare the volume
+    command: ['redis-server', '--appendonly', 'yes']
+    volumes:
       - ./redis_data:/data
+    container_name: redis
+  server:
+    image: todo-backend-dev
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./:/usr/src/app
+    ports:
+      - 3000:3000
+    environment:
+      REDIS_URL: redis://redis:6379
+      MONGO_URL: mongodb://the_username:the_password@mongo:27017/the_database
+    container_name: todo-backend-dev
