--- a/part12-containers/todo-app/docker-compose.yml
+++ b/part12-containers/todo-app/docker-compose.yml
@@ -3,13 +3,13 @@ services:
     image: todo-frontend
     build:
       context: ./todo-frontend
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
     volumes:
       - ./todo-frontend/:/usr/src/app
     # ports:
-    #   - 3000:3000
+    #   - 3000:80
     # environment:
-    #   REACT_APP_BACKEND_URL: http://localhost:8080/api/
+    #   REACT_APP_BACKEND_URL: http://localhost:8080/api/ # it doesn't want to take this in production, write into Dockerfile or .env file
     container_name: todo-frontend
     depends_on:
       - todo-backend
@@ -17,7 +17,7 @@ services:
     image: todo-backend
     build:
       context: ./todo-backend
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
     volumes:
       - ./todo-backend/:/usr/src/app
     # ports:
@@ -31,8 +31,8 @@ services:
       - mongo
   mongo:
     image: mongo
-    ports:
-     - 3456:27017
+    # ports:
+    #  - 3456:27017
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
@@ -43,8 +43,8 @@ services:
     container_name: mongo
   redis:
     image: redis:7.0.5-bullseye
-    ports:
-      - 6378:6379
+    # ports:
+    #   - 6378:6379
     command: ['redis-server', '--appendonly', 'yes']
     volumes:
       - ./todo-backend/redis_data:/data
@@ -52,7 +52,7 @@ services:
   nginx:
     image: nginx:1.20.1
     volumes:
-      - ./dev.nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - 8080:80
     container_name: reverse-proxy
